Fix open book modal content layout issues
Applied correct border color to the "Butterfly Garden" open book modal.
Defined the grid-template-rows CSS property as "100%" for the
"book-modal-content" class to prevent overflow when the "remove" button
was pressed, particulary for extra long text content such as long book
titles. Removed "removeQueenButton.remove()" from the event listener for
the "Rumi" book's "remove" button. Removed the else statement from all
existing book interface code to prevent the code from needlessly logging
"something went wrong".

--- a/Assets/CSS/modals_stylesheet.css
+++ b/Assets/CSS/modals_stylesheet.css
@@ -210,6 +210,7 @@ button {
     border-radius: 5px;
     display: grid;
     grid-template-columns: 20fr 20fr 1fr;
+    grid-template-rows: 100%;
 }
 
 .book-button {
